--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -3522,6 +3522,14 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**The column Education is defined as Object and has 2 values (Undergraduate, Postgraduate). You need to \n",
+        "shape the values as numeric to be able to plot the histogram**"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 54,
       "metadata": {},
