--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -15,17 +15,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 100,
       "metadata": {
         "id": "4-2Um6X6EpZm"
       },
       "outputs": [],
       "source": [
         "import pandas as pd\n",
-        "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "import warnings\n",
+        "import datetime\n",
         "warnings.filterwarnings(\"ignore\") "
       ]
     },
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 101,
       "metadata": {
         "id": "_gBgfOh_FEfM"
       },
@@ -424,7 +424,7 @@
               "[2240 rows x 29 columns]"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 101,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -446,7 +446,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 102,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -658,7 +658,7 @@
               "[5 rows x 29 columns]"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 102,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -669,7 +669,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 103,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -825,7 +825,7 @@
               "[3 rows x 29 columns]"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 103,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -845,7 +845,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 104,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1151,7 +1151,7 @@
               "[8 rows x 26 columns]"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 104,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1171,7 +1171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 105,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1222,7 +1222,7 @@
               "dtype: object"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 105,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1243,7 +1243,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 106,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1279,7 +1279,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 107,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1329,7 +1329,7 @@
               " 'Response']"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 107,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1351,7 +1351,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 108,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1386,34 +1386,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "Index(['ID', 'Year_Birth', 'Education', 'Marital_Status', 'Income', 'Kidhome',\n",
-              "       'Teenhome', 'Dt_Customer', 'Recency', 'MntWines', 'MntFruits',\n",
-              "       'MntMeatProducts', 'MntFishProducts', 'MntSweetProducts',\n",
-              "       'MntGoldProds', 'NumDealsPurchases', 'NumWebPurchases',\n",
-              "       'NumCatalogPurchases', 'NumStorePurchases', 'NumWebVisitsMonth',\n",
-              "       'AcceptedCmp3', 'AcceptedCmp4', 'AcceptedCmp5', 'AcceptedCmp1',\n",
-              "       'AcceptedCmp2', 'Complain', 'Z_CostContact', 'Z_Revenue', 'Response'],\n",
-              "      dtype='object')"
-            ]
-          },
-          "execution_count": 11,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "df.columns"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 110,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1511,7 +1484,7 @@
               "4    173      43   118    46     27    15"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 110,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1536,34 +1509,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "Index(['ID', 'Year_Birth', 'Education', 'Marital_Status', 'Income', 'Kidhome',\n",
-              "       'Teenhome', 'Dt_Customer', 'Recency', 'MntWines', 'MntFruits',\n",
-              "       'MntMeatProducts', 'MntFishProducts', 'MntSweetProducts',\n",
-              "       'MntGoldProds', 'NumDealsPurchases', 'NumWebPurchases',\n",
-              "       'NumCatalogPurchases', 'NumStorePurchases', 'NumWebVisitsMonth',\n",
-              "       'AcceptedCmp3', 'AcceptedCmp4', 'AcceptedCmp5', 'AcceptedCmp1',\n",
-              "       'AcceptedCmp2', 'Complain', 'Z_CostContact', 'Z_Revenue', 'Response'],\n",
-              "      dtype='object')"
-            ]
-          },
-          "execution_count": 13,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "df.columns"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 112,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1643,7 +1589,7 @@
               "4    5        3      6"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 112,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1673,7 +1619,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 113,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1741,7 +1687,7 @@
               "4                  5"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 113,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1762,7 +1708,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 114,
       "metadata": {
         "id": "f6Tk-8GYLdbm"
       },
@@ -1785,38 +1731,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "0       1957\n",
-              "1       1954\n",
-              "2       1965\n",
-              "3       1984\n",
-              "4       1981\n",
-              "        ... \n",
-              "2235    1967\n",
-              "2236    1946\n",
-              "2237    1981\n",
-              "2238    1956\n",
-              "2239    1954\n",
-              "Name: Year_Birth, Length: 2240, dtype: int64"
-            ]
-          },
-          "execution_count": 17,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "dfm['Year_Birth']"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 116,
       "metadata": {},
       "outputs": [
         {
@@ -1830,13 +1745,12 @@
               "Name: Age, dtype: int64"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 116,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "import datetime\n",
         "current_year = datetime.datetime.now().year # getting the current year\n",
         "dfm['Age'] = current_year - dfm['Year_Birth'] # calculating the age (current year - year of birth)\n",
         "dfm['Age'].head() # displaying the first 5 rows of the 'Age' column"
@@ -1853,7 +1767,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 117,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1874,7 +1788,7 @@
               "Name: Spending, dtype: int64"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 117,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1895,38 +1809,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "0       04-09-2012\n",
-              "1       08-03-2014\n",
-              "2       21-08-2013\n",
-              "3       10-02-2014\n",
-              "4       19-01-2014\n",
-              "           ...    \n",
-              "2235    13-06-2013\n",
-              "2236    10-06-2014\n",
-              "2237    25-01-2014\n",
-              "2238    24-01-2014\n",
-              "2239    15-10-2012\n",
-              "Name: Dt_Customer, Length: 2240, dtype: object"
-            ]
-          },
-          "execution_count": 20,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "dfm['Dt_Customer']"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 119,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1947,7 +1830,7 @@
               "Name: Dt_Customer, dtype: datetime64[ns]"
             ]
           },
-          "execution_count": 21,
+          "execution_count": 119,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1969,7 +1852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 120,
       "metadata": {},
       "outputs": [
         {
@@ -1988,7 +1871,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 121,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2017,7 +1900,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 122,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2038,7 +1921,7 @@
               "Name: Marital_Status, dtype: object"
             ]
           },
-          "execution_count": 24,
+          "execution_count": 122,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2068,7 +1951,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 123,
       "metadata": {},
       "outputs": [
         {
@@ -2087,7 +1970,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 124,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2116,7 +1999,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 125,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2137,7 +2020,7 @@
               "Name: Education, dtype: object"
             ]
           },
-          "execution_count": 27,
+          "execution_count": 125,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2155,7 +2038,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 126,
       "metadata": {},
       "outputs": [
         {
@@ -2183,7 +2066,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 127,
       "metadata": {
         "id": "6oOAU1hslNz2"
       },
@@ -2261,22 +2144,19 @@
               "max    666666.000000"
             ]
           },
-          "execution_count": 29,
+          "execution_count": 127,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "columns = ['Income']\n",
-        "dfm[columns].describe()\n",
-        "#\n",
-        "# columns_to_delete = ['Income']\n",
-        "# dfm.drop(columns=columns_to_delete, inplace=True)"
+        "dfm[columns].describe()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 128,
       "metadata": {},
       "outputs": [
         {
@@ -2300,7 +2180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 129,
       "metadata": {},
       "outputs": [
         {
@@ -2338,7 +2218,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 130,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2421,7 +2301,7 @@
               "max    666666.000000"
             ]
           },
-          "execution_count": 32,
+          "execution_count": 130,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2443,7 +2323,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 131,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2506,7 +2386,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 132,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2541,7 +2421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 133,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2562,7 +2442,7 @@
               "Name: Children, dtype: int64"
             ]
           },
-          "execution_count": 35,
+          "execution_count": 133,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2586,7 +2466,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 134,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2607,7 +2487,7 @@
               "Name: Has_Complaint, dtype: object"
             ]
           },
-          "execution_count": 36,
+          "execution_count": 134,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2620,7 +2500,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 149,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2633,21 +2513,16 @@
         {
           "data": {
             "text/plain": [
-              "0    No complaint\n",
-              "1    No complaint\n",
-              "2    No complaint\n",
-              "3    No complaint\n",
-              "4    No complaint\n",
-              "Name: Has_Complaint, dtype: object"
+              "array(['No complaint', 'Has complaint'], dtype=object)"
             ]
           },
-          "execution_count": 37,
+          "execution_count": 149,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "dfm['Has_Complaint'].head()"
+        "dfm['Has_Complaint'].unique() # checking the unique values to see changes"
       ]
     },
     {
@@ -2661,7 +2536,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 136,
       "metadata": {},
       "outputs": [
         {
@@ -2859,7 +2734,7 @@
               "[5 rows x 32 columns]"
             ]
           },
-          "execution_count": 38,
+          "execution_count": 136,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2886,7 +2761,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 137,
       "metadata": {},
       "outputs": [
         {
@@ -2901,7 +2776,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 39,
+          "execution_count": 137,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2912,7 +2787,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 138,
       "metadata": {},
       "outputs": [
         {
@@ -3103,7 +2978,7 @@
               "[2208 rows x 8 columns]"
             ]
           },
-          "execution_count": 40,
+          "execution_count": 138,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -3124,7 +2999,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 139,
       "metadata": {},
       "outputs": [
         {
@@ -3133,7 +3008,7 @@
               "Text(0, 0.5, 'Frequency')"
             ]
           },
-          "execution_count": 41,
+          "execution_count": 139,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -3176,7 +3051,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 140,
       "metadata": {},
       "outputs": [
         {
@@ -3211,7 +3086,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 141,
       "metadata": {},
       "outputs": [
         {
@@ -3251,7 +3126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 142,
       "metadata": {},
       "outputs": [
         {
@@ -3285,7 +3160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 143,
       "metadata": {},
       "outputs": [
         {
@@ -3326,7 +3201,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 144,
       "metadata": {},
       "outputs": [
         {
@@ -3361,7 +3236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 145,
       "metadata": {},
       "outputs": [
         {
@@ -3404,7 +3279,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 146,
       "metadata": {},
       "outputs": [
         {
@@ -3437,7 +3312,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 147,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -3447,7 +3322,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 148,
       "metadata": {},
       "outputs": [
         {
